# SomaRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo-tasks.md  plan.md
.cursor/skills/somarender-guide/: SKILL.md
assets/: README.md
shaders/: volume_raster.vert.wgsl  volume_raycast.frag.wgsl
src/: camera.cpp  camera.h  gpu_context.cpp  gpu_context.h  main.cpp  volume_loader.cpp  volume_loader.h
